// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RehireNotEligibleSeasonalOnly should match snapshot with jobDetail 1`] = `
<Col
  gridGap="S300"
>
  <Text
    font="primary"
    fontSize="T300"
    hyphens="none"
  >
    Thank you for your interest in the {jobTitle} position. Our records indicate that you previously worked at Amazon.  At this time, you are eligible for rehire as a Seasonal Amazon Associate or third-party agency employee based upon your employment record. As a result, we are unable to move forward with your candidacy for this job. If you have any questions regarding rehire eligibility, contact the site HR Team.
  </Text>
  <Text
    font="primary"
    fontSize="T300"
    hyphens="none"
  >
    Please visit our Seasonal Page to explore seasonal opportunities in your area.
  </Text>
</Col>
`;

exports[`RehireNotEligibleSeasonalOnly should match snapshot without jobDetail 1`] = `
<Col
  gridGap="S300"
>
  <Text
    font="primary"
    fontSize="T300"
    hyphens="none"
  >
    Thank you for your interest in this position. Our records indicate that you previously worked at Amazon.  At this time, you are eligible for rehire as a Seasonal Amazon Associate or third-party agency employee based upon your employment record. As a result, we are unable to move forward with your candidacy for this job. If you have any questions regarding rehire eligibility, contact the site HR Team.
  </Text>
  <Text
    font="primary"
    fontSize="T300"
    hyphens="none"
  >
    Please visit our Seasonal Page to explore seasonal opportunities in your area.
  </Text>
</Col>
`;
